# basen

./: .bumpversion.cfg  LICENSE  README.md  pyproject.toml  setup.py  tests.py
.github/workflows/: publish.yml  test.yml
basen/: __init__.py  basen.py  int2base.py
src/basen/: __init__.py  basen.py  int2base.py
tests/: test_basen.py  test_int2base.py
